--- a/UskudarDenetim.UI/Views/Home/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
 @Html.Partial("_FAQAndMaster")
 @Html.Partial("_Employees")
 <div class="dt-sc-margin100"></div>
-@Html.Partial("_ReachUS")
+@Html.Partial("_ReachUS", new UskudarDenetim.UI.Models.ModelContact())
 @Html.Partial("_ContactUS")
