--- a/UskudarDenetim.UI/Views/Shared/_Header.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Header.cshtml
@@ -15,10 +15,10 @@
                             <a href="@Url.Action("Index","Home")">Ana Sayfa</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
-                        <li class="menu-item-megamenu-parent megamenu-4-columns-group menu-item-depth-0">
-                            <a href="@Url.Action("Index","TeamMember")">Ekip Yapısı</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>
+                        @*<li class="menu-item-megamenu-parent megamenu-4-columns-group menu-item-depth-0">
+                                <a href="@Url.Action("Index","TeamMember")">Ekip Yapısı</a>
+                                <a class="dt-menu-expand">+</a>
+                            </li>*@
                         <li class="menu-item-simple-parent">
                             <a href="@Url.Action("Index","Services")">Hizmetlerimiz</a>
                             <a class="dt-menu-expand">+</a>
@@ -35,7 +35,12 @@
                             <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("About","Home")">Hakkımızda</a>
+                            <a href="#">Hakkımızda</a>
+                            <ul class="sub-menu">
+                                <li><a href="@Url.Action("About","Home")">Ekip Yapısı</a></li>
+                                <li><a href="@Url.Action("Index","TeamMember")">Biz Kimiz?</a></li>
+
+                            </ul>
                             <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent">
