--- a/UskudarDenetim.UI/Content/additional-css/attorney/style.css
+++ b/UskudarDenetim.UI/Content/additional-css/attorney/style.css
@@ -1,9 +1,9 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 #logo { padding:12px 0 7px; }
 
-.parallax-bg { background-image:url(http://www.placehold.it/1920x800&text=Parallax); }
+.parallax-bg { background-image:url(../../../Images/message-parallax-bg.jpg); }
 #footer .footer-widgets-wrapper.type4 { background-color:#000000; }
 
 @media only screen and (min-width:768px) and (max-width:959px) {
