--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -46,6 +46,10 @@
                             <a href="@Url.Action("Employees","Admin")">Çalışanlar</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
+                        <li class="menu-item-simple-parent">
+                            <a href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet alanları</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
                         @*<li class="menu-item-simple-parent">
             <a href="@Url.Action("","")">Randevu</a>
             <a class="dt-menu-expand">+</a>
