--- a/UskudarDenetim.UI/Views/ActivityArea/_ActivityArea.cshtml
+++ b/UskudarDenetim.UI/Views/ActivityArea/_ActivityArea.cshtml
@@ -21,14 +21,14 @@
                     <div class="icon animate" data-animation="fadeInRight" data-delay="100">
                         <span class="fa fa-edit"></span>
                     </div>
-                    <h4> <a     > @activityArea.Name </a> </h4>
+                    <h4> <a> @activityArea.Name </a> </h4>
                     <p>@activityArea.Description</p>
                 </div>
             </div>
             if (count % 3 == 0 && count != 0)
             { <text>@margin30</text>}
 
-
+            count++;
     }
     </div>
     <div class="dt-sc-margin50"></div>
