HR Apply form Sayfası ve methodları açıldı

--- a/UskudarDenetim.UI/Views/Admin/UpdateEmployee.cshtml
+++ b/UskudarDenetim.UI/Views/Admin/UpdateEmployee.cshtml
@@ -47,7 +47,7 @@
                     @Html.TextBoxFor(x => x.BirthDate, new { @placeholder = "E-Posta Adresini Giriniz", @required = "required", @type = "date" })
                 </p>
                 <p class="dt-sc-one-half column">
-
+                    <input type="file" name="file" />
                 </p>
 
             </div>
