--- a/UskudarDenetim.UI/Views/Shared/_Header.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Header.cshtml
@@ -24,7 +24,7 @@
                             <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-megamenu-parent megamenu-4-columns-group menu-item-depth-0">
-                            <a href="#">İnsan Kaynakları</a>
+                            <a href="@Url.Action("Index","HR")">İnsan Kaynakları</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent">
