Faydalı Linkler Kodlama Tamamlanıldı

--- a/UskudarDenetim.UI/Views/ActivityArea/_ActivityArea.cshtml
+++ b/UskudarDenetim.UI/Views/ActivityArea/_ActivityArea.cshtml
@@ -2,7 +2,7 @@
 @{
 
     int count = 0;
-    string margin30 = "  <div class='dt-sc-margin30'></div>";
+    string margin30 = "dt-sc-margin30";
     string First = "first";
 }
 <div class="full-width-section">
@@ -26,7 +26,7 @@
                 </div>
             </div>
             if (count % 3 == 0 && count != 0)
-            { <text>@margin30</text>}
+            { }
 
             count++;
     }
