--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -62,6 +62,10 @@
                             <a href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
+                        <li class="menu-item-simple-parent">
+                            <a href="@Url.Action("PracticalInformations","PracticalInformation")">Faydalı Bilgiler</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
                         @*<li class="menu-item-simple-parent">
             <a href="@Url.Action("","")">Randevu</a>
             <a class="dt-menu-expand">+</a>
