--- a/UskudarDenetim.UI/Views/Home/Contact.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Contact.cshtml
@@ -98,12 +98,12 @@
 
         function init() {
             myMap = new ymaps.Map("map", {
-                center: [55.76, 37.64],
-                zoom: 7
+                center: [41.001698, 29.075744],
+                zoom: 12
             });
 
-            myPlacemark = new ymaps.Placemark([55.76, 37.64], {
-                hintContent: 'Moscow!', balloonContent: 'Capital of Russia'
+            myPlacemark = new ymaps.Placemark([41.001698, 29.075744], {
+                hintContent: 'Üsküdar Denetim!', balloonContent: 'Üsküdar Denetim'
             });
 
             myMap.geoObjects.add(myPlacemark);
