--- a/UskudarDenetim.UI/Views/Home/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 @Html.Action("GetServices", "Service")
 
 
-@Html.Action("_PracticalInformations", "PracticalInformation")
+@Html.Action("_PracticalInformations", "PracticalInformations")
 @Html.Partial("_Employees")
 <div class="dt-sc-margin100"></div>
 @Html.Partial("_ReachUS", new UskudarDenetim.UI.Models.ModelContact())
